         of partial samples with the sfifo using sound interfaces (Fred).
20070522 fuse.c,if1.c: don't use rand_r as it's not available on all platforms
         (thanks, Stuart Brady) (Fred).
20070522 widget/filesel.c: include utils.h for prototype for
         utils_is_absolute_path (Fred).
20070522 widget: ignore *.a libraries (Fred).
20070522 compat: ignore *.a libraries (Fred).
20070522 if1.c: don't need time.h anymore (thanks, Stuart Brady) (Fred).
20070524 z80/z80.pl,z80/tests/27_1.{in,out}: fix undocumented behaviour of
	 DAA (patch #1724193) (Stuart Brady).
20070525 widget/filesel.c: refactor widget_scandir() and improve its error
	 handling (patch #1723371) (Stuart).
20070525 hacking/win32_todo.txt: move from ui/win32/todo.txt into hacking
	 directory, and remove completed items (Stuart).
20070525 ui/gtk/gtkmouse.c: add comment suggesting SetCursorPos() for
	 gtkmouse_reset_pointer() on Win32 (Stuart).
20070525 fuse.[ch],ui/win32/win32ui.c: rename main() to fuse_main() when
	 building with the Win32 UI (Stuart).
20070525 fuse.c: disable copyright message on startup on Win32, to avoid
	 creating an unwanted Win32 console (Stuart).
20070525 ui/win32/menu_data.rc: fix accelerator keys in Win32 UI (Stuart).
20070525 configure.in: add --with-win32 to check for native Win32 UI (Stuart).
20070525 acinclude.m4: remove warning about underquoted definition (Stuart).
20070525 ui/win32/menu_data.h: fix junk in GPL notice (Stuart).
20070526 ui/sdl: ignore *.a libraries (Fred).
20070526 ui/sdl/sdlkeyboard.c: enable key repeat for use in the widget
         fileselector (part of feature request #1720212) (thanks, Cygnus)
         (Fred).
20070526 Makefile.am,menu_data.{dat,pl},ui/gtk/Makefile.am,widget/Makefile.am:
	 rename menu_data.c to menu_data.dat (Stuart).
20070526 <almost everything>: update FSF address in GPL notices, add
	 autogenerated-file comment to settings.h, add missing Id tags, and
	 boilerplate formatting fixes (Stuart).