@@ -1,8 +1,8 @@
 #!/usr/bin/perl -w
 
 # keysyms.pl: generate keysyms.c from keysyms.dat
-# Copyright (c) 2000-2005 Philip Kendall, Matan Ziv-Av, Russell Marks,
-#			  Fredrick Meunier
+# Copyright (c) 2000-2007 Philip Kendall, Matan Ziv-Av, Russell Marks,
+#			  Fredrick Meunier, Catalin Mihaila, Stuart Brady
 
 # $Id$
 
@@ -34,7 +34,7 @@ my $ui = shift;
 $ui = 'gtk' unless defined $ui;
 
 die "$0: unrecognised user interface: $ui\n"
-  unless 0 < grep { $ui eq $_ } ( 'ggi', 'gtk', 'x', 'svga', 'fb', 'sdl' );
+  unless 0 < grep { $ui eq $_ } ( 'ggi', 'gtk', 'x', 'svga', 'fb', 'sdl', 'win32' );
 
 sub fb_keysym ($) {
 
@@ -140,6 +140,28 @@ sub svga_keysym ($) {
     return $keysym;
 }
 
+sub win32_keysym ($) {
+
+    my $keysym = shift;
+
+    # http://msdn2.microsoft.com/en-us/library/ms645540.aspx
+
+    $keysym =~ tr/a-z/A-Z/;
+
+    if ( $keysym =~ /^[A-Z0-9]$/ ) {
+	$keysym = "'$keysym'";
+    } else {
+	$keysym =~ s/(.*)_L$/$1/;
+	$keysym =~ s/META$/LWIN/;
+	$keysym =~ s/ALT$/MENU/;	# Not a typo: the 'menu' key is VK_APPS
+
+	# All the magic #defines start with `VK_'
+	$keysym = "VK_$keysym";
+    }
+
+    return $keysym;
+}
+
 # Parameters for each UI
 my %ui_data = (
 
@@ -229,6 +251,31 @@ my %ui_data = (
 	      translations => { },
 	      function => sub ($) { "XK_$_[0]" },
 	    },
+
+    win32 => { headers => [ 'windows.h' ],
+	      max_length => 16,
+	      skips => { map { $_ => 1 } ( 'Shift_R','Control_R',
+					   'Alt_R','Meta_R',
+					   'Hyper_L','Hyper_R',
+					   'Super_L','Super_R',
+					   'A' .. 'Z' ) },
+	      translations => { 
+		  numbersign  => 'OEM_5',
+		  apostrophe  => 'OEM_7',
+		  comma       => 'OEM_COMMA',
+		  minus       => 'OEM_MINUS',
+		  period      => 'OEM_PERIOD',
+		  slash       => 'OEM_2',
+		  BackSpace   => 'BACK',
+		  semicolon   => 'OEM_1',
+		  equal       => 'OEM_PLUS',
+		  Page_Up     => 'PRIOR',
+		  Page_Down   => 'NEXT',
+		  Caps_Lock   => 'CAPITAL',
+	          Mode_switch => 'APPS',
+	      },
+	      function => \&win32_keysym
+	    },
 );
 
 # Translation table for any UI which uses keyboard mode K_MEDIUMRAW
@@ -277,8 +324,8 @@ my $define = uc $ui;
 
 print Fuse::GPL(
     'keysyms.c: UI keysym to Fuse input layer keysym mappings',
-    "2000-2005 Philip Kendall, Matan Ziv-Av, Russell Marks,\n" .
-    "                           Fredrick Meunier, Catalin Mihaila"  ),
+    "2000-2007 Philip Kendall, Matan Ziv-Av, Russell Marks\n" .
+    "                           Fredrick Meunier, Catalin Mihaila, Stuart Brady" ),
     << "CODE";
 
 /* This file is autogenerated from keysyms.dat by keysyms.pl.
@@ -287,6 +334,18 @@ print Fuse::GPL(
 #include <config.h>
 
 #ifdef UI_$define
+
+CODE
+
+# Comment to unbreak Emacs' perl mode
+
+if ( $ui eq 'win32' ) {
+    # To allow VK_OEM_{COMMA,MINUS,PERIOD,PLUS} to be used, we must
+    # define WINVER to be >= 0x0500 before we include <windows.h>
+    print "#define WINVER 0x0500\n"
+}
+
+print << "CODE";
 
 #include "input.h"
 #include "keyboard.h"
