@@ -1698,3 +1698,5 @@
 20070526 <almost everything>: update FSF address in GPL notices, add
 	 autogenerated-file comment to settings.h, add missing Id tags, and
 	 boilerplate formatting fixes (Stuart).
+20070526 keysyms.pl,ui/win32/{Makefile.am,keysyms.c}: autogenerate
+         ui/win32/keysyms.c from keysyms.dat (Stuart).
